[package]
name = "resvg-jpeg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
tiny-skia = "0.11"

resvg = "0.46"
usvg = "0.46" 
fontdb = "0.23"
anyhow = "1.0.101"
csscolorparser = "0.8.2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
